Add Section component for wrapping content in styleable sections
Wanted to be able to establish hierarchy and structure within
mdx content. Now you can wrap content with
<Section flavour="strong|subtle"> in mdx.

--- a/src/app/comparison5/content.mdx
+++ b/src/app/comparison5/content.mdx
@@ -4,27 +4,30 @@ This page demonstrates the **power of MDX** - a format that lets you write JSX i
 
 **Font Optimization**: This page uses `next/font` to automatically optimize and load multiple Google Fonts: Inter for body text, JetBrains Mono for code, and the modern Poppins for headings - all with automatic font swapping and performance optimizations.
 
-## What Makes This Implementation Special?
+<Section flavour="strong">
+  ## What Makes This Implementation Special?
 
-This page combines multiple powerful technologies:
+  This page combines multiple powerful technologies:
 
-### 🎨 **SCSS Preprocessing**
+  ### 🎨 **SCSS Preprocessing**
 
-- **Variables**: Consistent colors, spacing, and fonts throughout
-- **Mixins**: Reusable styling patterns for headings and code elements
-- **Nesting**: Organized selector hierarchy for complex components like tables
-- **Better Maintainability**: Change design tokens once, update everywhere
+  - **Variables**: Consistent colors, spacing, and fonts throughout
+  - **Mixins**: Reusable styling patterns for headings and code elements
+  - **Nesting**: Organized selector hierarchy for complex components like tables
+  - **Better Maintainability**: Change design tokens once, update everywhere
 
-### 📝 **MDX Content Authoring**
+  ### 📝 **MDX Content Authoring**
 
-- Write content in **familiar Markdown syntax**
-- Embed React components directly in the content
-- Create rich, interactive documentation and landing pages
-- Maintain type safety with TypeScript
-- Leverage the full Next.js ecosystem
-- **Benefit from automatic font optimization** with `next/font`
+  - Write content in **familiar Markdown syntax**
+  - Embed React components directly in the content
+  - Create rich, interactive documentation and landing pages
+  - Maintain type safety with TypeScript
+  - Leverage the full Next.js ecosystem
+  - **Benefit from automatic font optimization** with `next/font`
 
-> **Pro Tip**: The combination of SCSS + MDX + React components provides the most powerful and maintainable approach for content-heavy applications with complex styling needs.
+  > **Pro Tip**: The combination of SCSS + MDX + React components provides the most powerful and maintainable approach for content-heavy applications with complex styling needs.
+
+</Section>
 
 ## Key Benefits Over Previous Approaches
 
