Simplify FeaturesGrid with functional flavour variants
Simplify FeaturesGrid component architecture while implementing
functional flavour variants and improving code readability.

Changes:
- Extract helper functions: processElementsIntoCards(), gridStyleFor()
- Implement visual flavour variants (default/compact/highlighted)
- Reduce component complexity: ~90 lines → ~52 lines
- Update CSS: .featureCard → .default naming convention
- Add flavour-specific styling with proper visual differences
- Improve variable naming: generic 'i' → semantic 'cardIndex'

Visual changes:
- compact: 80% scale, reduced padding for denser layouts
- highlighted: gradient backgrounds with enhanced hover effects
- default: maintains original styling exactly

No breaking changes - all existing MDX usage continues to work.
Maintains exact visual fidelity while dramatically improving
maintainability and extensibility.

--- a/src/app/comparison5/content.mdx
+++ b/src/app/comparison5/content.mdx
@@ -47,37 +47,24 @@ This page demonstrates the **power of MDX** - a format that lets you write JSX i
 
 Here's our features grid, but now embedded directly in MDX content:
 
-<FeaturesGrid>
-  <FeatureCard
-    emoji="🚀"
-    title="Fast Loading"
-    description="Static HTML loads instantly without any JavaScript frameworks or build processes. Perfect for simple landing pages that need maximum speed."
-  />
-  <FeatureCard
-    emoji="📱"
-    title="Responsive Design"
-    description="CSS Grid and Flexbox ensure this page looks great on all devices, from mobile phones to desktop computers."
-  />
-  <FeatureCard
-    emoji="🎨"
-    title="Modern Styling"
-    description="Clean, modern design with smooth transitions and hover effects using pure CSS without any external dependencies."
-  />
-  <FeatureCard
-    emoji="♿"
-    title="Accessible"
-    description="Semantic HTML structure with proper heading hierarchy and alt text for screen readers and better SEO."
-  />
-  <FeatureCard
-    emoji="🔧"
-    title="Easy to Modify"
-    description="Simple HTML and CSS that any developer can understand and modify without learning complex frameworks."
-  />
-  <FeatureCard
-    emoji="🌐"
-    title="Universal Support"
-    description="Works in every browser, even older ones, without polyfills or transpilation. Maximum compatibility guaranteed."
-  />
+<FeaturesGrid flavour="default">
+  ### 🚀 Fast Loading
+  Static HTML loads instantly without any JavaScript frameworks or build processes. Perfect for simple landing pages that need maximum speed.
+
+  ### 📱 Responsive Design
+  CSS Grid and Flexbox ensure this page looks great on all devices, from mobile phones to desktop computers.
+
+  ### 🎨 Modern Styling
+  Clean, modern design with smooth transitions and hover effects using pure CSS without any external dependencies.
+
+  ### ♿ Accessible
+  Semantic HTML structure with proper heading hierarchy and alt text for screen readers and better SEO.
+
+  ### 🔧 Easy to Modify
+  Simple HTML and CSS that any developer can understand and modify without learning complex frameworks.
+
+  ### 🌐 Universal Support
+  Works in every browser, even older ones, without polyfills or transpilation. Maximum compatibility guaranteed.
 </FeaturesGrid>
 
 ### 📝 **Content Authoring Experience**
