--- a/src/app/content.mdx
+++ b/src/app/content.mdx
@@ -53,31 +53,24 @@ Click on each link below to see the different implementations. Each page demonst
 
 This project was built using modern web technologies:
 
-<FeaturesGrid>
-  <FeatureCard
-    title="Next.js 15"
-    description="React framework with App Router, server components, and automatic optimizations"
-  />
-  <FeatureCard
-    title="TypeScript"
-    description="Type-safe JavaScript for better development experience and fewer bugs"
-  />
-  <FeatureCard
-    title="MDX"
-    description="Markdown + JSX for content authoring with embedded React components"
-  />
-  <FeatureCard
-    title="SCSS Preprocessing"
-    description="Advanced CSS with variables, mixins, nesting for maintainable and organized stylesheets"
-  />
-  <FeatureCard
-    title="Font Optimization"
-    description="Automatic font loading and optimization with next/font"
-  />
-  <FeatureCard
-    title="ESLint"
-    description="Code linting for consistent code quality and best practices"
-  />
+<FeaturesGrid flavour="default">
+  ### Next.js 15
+  React framework with App Router, server components, and automatic optimizations
+
+  ### TypeScript
+  Type-safe JavaScript for better development experience and fewer bugs
+
+  ### MDX
+  Markdown + JSX for content authoring with embedded React components
+
+  ### SCSS Preprocessing
+  Advanced CSS with variables, mixins, nesting for maintainable and organized stylesheets
+
+  ### Font Optimization
+  Automatic font loading and optimization with next/font
+
+  ### ESLint
+  Code linting for consistent code quality and best practices
 </FeaturesGrid>
 
 ## 💭 Key Insights
