Clarify easier use of jsx in the mdx file

--- a/src/app/comparison5/content.mdx
+++ b/src/app/comparison5/content.mdx
@@ -73,6 +73,15 @@ The beauty of MDX is that **content creators** can focus on writing while **deve
 
 ```jsx
 // Just write components directly in your content!
+<FeaturesGrid flavour="default">
+  ### 🚀 Fast Loading
+  Static HTML loads instantly without any JavaScript frameworks or build
+  processes. Perfect for simple landing pages that need maximum speed.
+</FeaturesGrid>
+```
+
+```jsx
+// Note: The above React component markdown is easier on the eye than:
 <FeatureCard
   emoji="✨"
   title="Amazing Feature"
