--- a/src/app/comparison5/content.mdx
+++ b/src/app/comparison5/content.mdx
@@ -47,7 +47,64 @@ This page demonstrates the **power of MDX** - a format that lets you write JSX i
 
 Here's our features grid, but now embedded directly in MDX content:
 
+#### Default Flavour
+
+```jsx
+<FeaturesGrid flavour="default" />
+```
+
 <FeaturesGrid flavour="default">
+  ### 🚀 Fast Loading
+  Static HTML loads instantly without any JavaScript frameworks or build processes. Perfect for simple landing pages that need maximum speed.
+
+  ### 📱 Responsive Design
+  CSS Grid and Flexbox ensure this page looks great on all devices, from mobile phones to desktop computers.
+
+  ### 🎨 Modern Styling
+  Clean, modern design with smooth transitions and hover effects using pure CSS without any external dependencies.
+
+  ### ♿ Accessible
+  Semantic HTML structure with proper heading hierarchy and alt text for screen readers and better SEO.
+
+  ### 🔧 Easy to Modify
+  Simple HTML and CSS that any developer can understand and modify without learning complex frameworks.
+
+  ### 🌐 Universal Support
+  Works in every browser, even older ones, without polyfills or transpilation. Maximum compatibility guaranteed.
+</FeaturesGrid>
+
+
+#### Compact Flavour
+```jsx
+<FeaturesGrid flavour="compact" />
+```
+
+<FeaturesGrid flavour="compact">
+  ### 🚀 Fast Loading
+  Static HTML loads instantly without any JavaScript frameworks or build processes. Perfect for simple landing pages that need maximum speed.
+
+  ### 📱 Responsive Design
+  CSS Grid and Flexbox ensure this page looks great on all devices, from mobile phones to desktop computers.
+
+  ### 🎨 Modern Styling
+  Clean, modern design with smooth transitions and hover effects using pure CSS without any external dependencies.
+
+  ### ♿ Accessible
+  Semantic HTML structure with proper heading hierarchy and alt text for screen readers and better SEO.
+
+  ### 🔧 Easy to Modify
+  Simple HTML and CSS that any developer can understand and modify without learning complex frameworks.
+
+  ### 🌐 Universal Support
+  Works in every browser, even older ones, without polyfills or transpilation. Maximum compatibility guaranteed.
+</FeaturesGrid>
+
+#### Highlighted Flavour
+```jsx
+<FeaturesGrid flavour="highlighted" />
+```
+
+<FeaturesGrid flavour="highlighted">
   ### 🚀 Fast Loading
   Static HTML loads instantly without any JavaScript frameworks or build processes. Perfect for simple landing pages that need maximum speed.
 
