Refactor: eliminate default variant anti-pattern across components
Apply default-styles-in-base-selector principle by removing 'default'
variant logic and ensuring base CSS selectors contain all default styling.

Components updated:
- FeatureCard: Remove 'default' from interface, simplify class logic
- PropsBasedCard: Remove 'default' variant, use clsx with truthy check
- FeaturesGrid: Remove 'default' from interface, simplify class assignment
- PropsBasedGrid: Remove 'default' variant, use clsx pattern

Content updates:
- Remove flavour='default' from MDX files since base selectors now
  provide default styles automatically

Benefits:
- Cleaner component APIs without redundant 'default' prop values
- More intuitive behavior with automatic default styling
- Reduced conditional logic and cognitive overhead
- Better performance with fewer runtime checks

Follows default-styles-in-base-selector.md patterns where base CSS
classes contain default styles and modifiers are only applied when
explicitly requested via non-default flavour props.

--- a/src/app/comparison5/content.mdx
+++ b/src/app/comparison5/content.mdx
@@ -50,10 +50,10 @@ Here's our features grid, but now embedded directly in MDX content:
 #### Default Flavour
 
 ```jsx
-<FeaturesGrid flavour="default" />
+<FeaturesGrid />
 ```
 
-<FeaturesGrid flavour="default">
+<FeaturesGrid>
   ### 🚀 Fast Loading
   Static HTML loads instantly without any JavaScript frameworks or build processes. Perfect for simple landing pages that need maximum speed.
 
@@ -130,7 +130,7 @@ The beauty of MDX is that **content creators** can focus on writing while **deve
 
 ```jsx
 // Just write components directly in your content!
-<FeaturesGrid flavour="default">
+<FeaturesGrid>
   ### 🚀 Fast Loading
   Static HTML loads instantly without any JavaScript frameworks or build
   processes. Perfect for simple landing pages that need maximum speed.
