--- a/src/app/content.mdx
+++ b/src/app/content.mdx
@@ -55,7 +55,7 @@ Click on each link below to see the different implementations. Each page demonst
 
 This project was built using modern web technologies:
 
-<FeaturesGrid flavour="default">
+<FeaturesGrid>
   ### Next.js 15
   React framework with App Router, server components, and automatic optimizations
 
